<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_page_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_text_side_margin"
        android:layout_marginTop="@dimen/title_text_default_margin"
        android:layout_marginEnd="@dimen/title_text_side_margin"
        android:text="@string/currency_calculator_label"
        android:textAppearance="@style/TextTitle"
        app:layout_constraintEnd_toEndOf="@id/first_page_container"
        app:layout_constraintStart_toStartOf="@id/first_page_container"
        app:layout_constraintTop_toTopOf="@id/first_page_container" />

    <FrameLayout
        android:id="@+id/local_currency_textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/local_currency_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/local_currency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            tools:text="@string/label_text"
            android:textAppearance="@style/TextBodyLabel" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/foreign_currency_textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_currency_textLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/foreign_currency_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/foreign_currency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            tools:text="@string/label_text"
            android:textAppearance="@style/TextBodyLabel" />
    </FrameLayout>

    <Spinner
        android:id="@+id/local_currency_spinner"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foreign_currency_textLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/exchange_logo"
        app:layout_constraintBottom_toBottomOf="@+id/local_currency_spinner"
        app:layout_constraintEnd_toStartOf="@+id/foreign_currency_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/local_currency_spinner"
        app:layout_constraintTop_toTopOf="@+id/local_currency_spinner"
        app:srcCompat="@drawable/ic_swap_horiz_black_24dp" />

    <Spinner
        android:id="@+id/foreign_currency_spinner"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/convert_button"
        style="@style/ConvertButton"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_text_convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/exchange_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        tools:text="@string/exchange_rate_info_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_button" />

</androidx.constraintlayout.widget.ConstraintLayout>